Fixed text align of table headers

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ img {
 
 td, th {
 	border: 1px solid var(--border-color);
-  	text-align: left;
   	padding: 10px 50px;
   	width: 33%;
 }
